added a way to map Entity instances that are made of List of other entities into a List of their corresponding id via a generic custom ModelMapper.